[package]
name = "perceptual-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
rayon = "1.6"
walkdir = "2"
crossbeam-channel = "0.5"
img_hash = "3.2.0"
image = "0.23"
